--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -9,7 +9,7 @@
         "IEwqPxpCCxDp",
         "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyOipN1PyIjNW6z7DYTMkRi+",
+      "authorship_tag": "ABX9TyNuLafLvEvTcPiEm4O/LFut",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12908,7 +12908,11 @@
         "```\n",
         "```\n",
         "df.groupby(['Country']).get_group('India)['SalaryUSD'].mean()\n",
-        "```\n"
+        "```\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "2zyF3VwKbsha"
@@ -12933,7 +12937,11 @@
         "SYNTAX:\n",
         "df.unstack(level='Country', fill_value = 0.00)\n",
         "df.unstack(level='-1', fill_value = 0.00)\n",
-        "```"
+        "```\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "xnyyJCNXV9On"
@@ -12973,7 +12981,11 @@
         "\n",
         "observed : whether to show only observed vals for categorical data; type boolean; DEFAULT is False.\n",
         "\n",
-        "sort : sorts table by index and col; type boolean; DEFAULT is True."
+        "sort : sorts table by index and col; type boolean; DEFAULT is True.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "5YyWfW5xcOFM"
