--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -9,7 +9,7 @@
         "IEwqPxpCCxDp",
         "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyNuLafLvEvTcPiEm4O/LFut",
+      "authorship_tag": "ABX9TyPdDg8sW7uiud9SvPBHY4+5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12864,6 +12864,113 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### What percentage of respondents work remotely versus on-site?\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YGJBgbIJ0oRj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Identify the unique vals in 'WorkLoc' col\n",
+        "\n",
+        "df['WorkLoc'].unique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i8UqY1s5Ad71",
+        "outputId": "12230928-987c-4264-e522-c2e83209fb42"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([nan, 'Home', 'Office',\n",
+              "       'Other place, such as a coworking space or cafe'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Count no. of remote/onsite/total working respondents\n",
+        "\n",
+        "count_remote = df['WorkLoc'].isin(['Home', 'Other place, such as a coworking space or cafe']).sum()  # o/p : 29451\n",
+        "count_onsite = df['WorkLoc'].isin(['Office']).sum()  # o/p : 40588\n",
+        "count_total = count_remote + count_onsite\n",
+        "\n",
+        "pct_remote = round(count_remote / count_total * 100, 2)  # calc % of remote workers\n",
+        "pct_onsite = round(count_onsite / count_total * 100, 2)  # calc % of onsite workers\n",
+        "\n",
+        "print(pct_remote, '% developers work remotely.', '\\n', pct_onsite, '% developers work onsite.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XLeh3KMs1aCD",
+        "outputId": "3d9c72b6-d93b-4ed3-e366-59331dd50e8a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "42.05 % developers work remotely. \n",
+            " 57.95 % developers work onsite.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "zdblQwixFinC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#\n",
+        "df['MainBranch'].unique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IBwNPARs0p4M",
+        "outputId": "5bd349ec-fcb5-46e8-921f-d5a149e84ca9"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Student', 'Amateur', 'Pro Developer', 'Hobbyist',\n",
+              "       'Retired Developer', nan], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         "# import pandas as pd\n",
@@ -12877,7 +12984,7 @@
       "metadata": {
         "id": "HGYWHZf6k8R7"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
