--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -9,7 +9,7 @@
         "IEwqPxpCCxDp",
         "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyPdDg8sW7uiud9SvPBHY4+5",
+      "authorship_tag": "ABX9TyOKFc0JbiqTUB9bUh8f0aYP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10408,7 +10408,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 237
         },
         "id": "g7PkEx8oYv5W",
         "outputId": "e62d50ea-99d3-4efe-ff21-2947f51fa5a0"
@@ -11311,7 +11311,7 @@
         "id": "cmGk_xD6Ykfs",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 237
         },
         "outputId": "9af9082b-6df6-4685-eed1-d90fa913f87b"
       },
@@ -12876,7 +12876,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Identify the unique vals in 'WorkLoc' col\n",
+        "# Identify the unique non-NaN values in 'WorkLoc' col\n",
         "\n",
         "df['WorkLoc'].unique()"
       ],
@@ -12909,7 +12909,7 @@
         "\n",
         "count_remote = df['WorkLoc'].isin(['Home', 'Other place, such as a coworking space or cafe']).sum()  # o/p : 29451\n",
         "count_onsite = df['WorkLoc'].isin(['Office']).sum()  # o/p : 40588\n",
-        "count_total = count_remote + count_onsite\n",
+        "count_total = count_remote + count_onsite  # o/p : 70039\n",
         "\n",
         "pct_remote = round(count_remote / count_total * 100, 2)  # calc % of remote workers\n",
         "pct_onsite = round(count_onsite / count_total * 100, 2)  # calc % of onsite workers\n",
@@ -12921,7 +12921,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLeh3KMs1aCD",
-        "outputId": "3d9c72b6-d93b-4ed3-e366-59331dd50e8a"
+        "outputId": "fc2c6929-0a84-4704-d275-421cd529bfc1"
       },
       "execution_count": 5,
       "outputs": [
@@ -12937,7 +12937,117 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "**Another solution**"
+      ],
+      "metadata": {
+        "id": "BC-FMFQt3zdK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tmpdf = df['WorkLoc'].value_counts(normalize = True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 209
+        },
+        "id": "-BnPdEhH3x8q",
+        "outputId": "b7ca3904-9058-4137-8c8b-e3fdca0b2c0c"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "WorkLoc\n",
+              "Office                                            0.579506\n",
+              "Home                                              0.332258\n",
+              "Other place, such as a coworking space or cafe    0.088237\n",
+              "Name: proportion, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>proportion</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>WorkLoc</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Office</th>\n",
+              "      <td>0.579506</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Home</th>\n",
+              "      <td>0.332258</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Other place, such as a coworking space or cafe</th>\n",
+              "      <td>0.088237</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "offsite = tmpdf.loc[['Home', 'Other place, such as a coworking space or cafe']].sum()  # 0.42049...\n",
+        "onsite = tmpdf.loc['Office'].sum()  # 0.57950...\n",
+        "print(round(offsite * 100, 2), '% work offsite and', round(onsite * 100, 2), '% work onsite.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iF1z_2ZI4CIl",
+        "outputId": "765415e6-d12e-4fe9-a099-cafbe7ca063a"
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "42.05 % work offsite and 57.95 % work onsite.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### What percentage of respondents work remotely versus on-site in India?"
+      ],
       "metadata": {
         "id": "zdblQwixFinC"
       }
@@ -12945,28 +13055,223 @@
     {
       "cell_type": "code",
       "source": [
-        "#\n",
-        "df['MainBranch'].unique()"
+        "df_indian_workers = df[df['Country'] == 'India'].groupby('WorkLoc').size()\n",
+        "df_indian_workers\n",
+        "\n",
+        "# NOTE : 'size' is a PROPERTY in 'df.size' but is a METHOD in 'groupby([col_name]).size()\n",
+        "\n",
+        "# 'size()' counts NaN rows too; 'count()' IGNORES NaN rows; the reason size() here is NOT returning the\n",
+        "# count of NaNs in o/p because 'groupby()' has already excluded NaN in the 'WorkLoc' col by default."
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 209
         },
-        "id": "IBwNPARs0p4M",
-        "outputId": "5bd349ec-fcb5-46e8-921f-d5a149e84ca9"
+        "id": "Dsae-MK02L6D",
+        "outputId": "8205be76-1460-4bf0-8b09-4647f207b19d"
       },
-      "execution_count": 52,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array(['Student', 'Amateur', 'Pro Developer', 'Hobbyist',\n",
-              "       'Retired Developer', nan], dtype=object)"
+              "WorkLoc\n",
+              "Home                                              1637\n",
+              "Office                                            4392\n",
+              "Other place, such as a coworking space or cafe     590\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>WorkLoc</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Home</th>\n",
+              "      <td>1637</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Office</th>\n",
+              "      <td>4392</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Other place, such as a coworking space or cafe</th>\n",
+              "      <td>590</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Total no. of workers' rows for India\n",
+        "total_workers = df[df['Country'] == 'India'].groupby('WorkLoc').size().sum()    # groupby() excldues NaNs by default\n",
+        "total_workers     # o/p : 6619\n",
+        "# Following line gives same o/p as in above line\n",
+        "# df[df['Country'] == 'India']['WorkLoc'].isin(['Home', 'Office', 'Other place, such as a coworking space or cafe']).sum() # o/p : 6619\n",
+        "\n",
+        "onsite = df_indian_workers.loc['Office']  # extracting count of 'Office' from above o/p\n",
+        "offsite = df_indian_workers.loc[['Home', 'Other place, such as a coworking space or cafe']].sum() # total off-site workers\n",
+        "print(round(onsite / total_workers * 100, 2), '% work onsite &', round(offsite / total_workers * 100, 2), '% work offsite in India.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q4lQWYVO3DIv",
+        "outputId": "1934960e-d32b-44e4-8614-5f7208111347"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "66.35 % work onsite & 33.65 % work offsite in India.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Another solution**"
+      ],
+      "metadata": {
+        "id": "EqUex4FzsdNS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "workers_pct = df[df['Country'] == 'India']['WorkLoc'].value_counts(normalize = True)  # 'normalize' returns % composition\n",
+        "workers_pct\n",
+        "# In Line 1, 'value_counts()' ignores NaN rows unless 'dropna = False' is set within it"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 209
+        },
+        "id": "TTRm8uyXueqb",
+        "outputId": "299c121d-de57-46d6-f93d-6c9e10f06432"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "WorkLoc\n",
+              "Office                                            0.663544\n",
+              "Home                                              0.247318\n",
+              "Other place, such as a coworking space or cafe    0.089137\n",
+              "Name: proportion, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>proportion</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>WorkLoc</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Office</th>\n",
+              "      <td>0.663544</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Home</th>\n",
+              "      <td>0.247318</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Other place, such as a coworking space or cafe</th>\n",
+              "      <td>0.089137</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "home = round(workers_pct.loc['Home'] * 100, 2)  # 24.73\n",
+        "other = round(workers_pct.loc['Other place, such as a coworking space or cafe'] * 100, 2)  # 8.91\n",
+        "office = round(workers_pct.loc['Office'] * 100, 2)  # 66.35\n",
+        "\n",
+        "print(home + other, '% work remotely and', office, '% work onsite in India.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f8my95gBvn41",
+        "outputId": "f17559e3-a1bd-447a-8322-a25c9e0405eb"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "33.64 % work remotely and 66.35 % work onsite in India.\n"
+          ]
         }
       ]
     },
@@ -12984,7 +13289,7 @@
       "metadata": {
         "id": "HGYWHZf6k8R7"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
