--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -9,7 +9,7 @@
         "IEwqPxpCCxDp",
         "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyOKFc0JbiqTUB9bUh8f0aYP",
+      "authorship_tag": "ABX9TyNIGNWkbrAEiJV54bDd1ceq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,17 @@
       ],
       "metadata": {
         "id": "U-We9tKJwG5l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The Stack Overflow annual survey is a comprehensive study of the global developer community, providing insights into programming languages, technologies, remote work trends, job roles, work environments, educational backgrounds, and other developer demographics. It captures responses from thousands of developers worldwide.\n",
+        "\n",
+        "Here, we've used the Stack Overflow survey's data set for 2019. The size of the raw data set is 88883 records across 85 attributes. After cleaning the data set with Pandas, its size reduced to 88352 records across 24 attributes."
+      ],
+      "metadata": {
+        "id": "aI9nmA4LKjU5"
       }
     },
     {
@@ -9701,7 +9712,7 @@
         "id": "lmfIXobjtVE6",
         "outputId": "e8c287da-9a0a-4e77-c7b7-1d0c4e1f11f2"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10413,7 +10424,7 @@
         "id": "g7PkEx8oYv5W",
         "outputId": "e62d50ea-99d3-4efe-ff21-2947f51fa5a0"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10715,7 +10726,7 @@
         },
         "outputId": "628e9b4d-5a12-4b43-88c9-95b05a051900"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11008,7 +11019,7 @@
         "id": "AqHN0905eWMA",
         "outputId": "6aed6a8b-6aae-47eb-c4b7-6c683bdaae10"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11315,7 +11326,7 @@
         },
         "outputId": "9af9082b-6df6-4685-eed1-d90fa913f87b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -11966,7 +11977,7 @@
         "id": "9s-YENSsEaTi",
         "outputId": "e0c7e2a6-302d-4fdc-c722-95e7ed3d5c52"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12081,7 +12092,7 @@
         "id": "pR6jDu-FG9rs",
         "outputId": "7a59c25b-92bd-4b2f-c830-53efaf91d019"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12463,7 +12474,7 @@
         },
         "outputId": "1d5fe87a-641c-41c1-820b-28324deff42a"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12849,7 +12860,7 @@
         "id": "LidD_VaC3lOc",
         "outputId": "f6e99b05-6f8d-4fa6-cca6-9c0488a7950d"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12887,7 +12898,7 @@
         "id": "i8UqY1s5Ad71",
         "outputId": "12230928-987c-4264-e522-c2e83209fb42"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12923,7 +12934,7 @@
         "id": "XLeh3KMs1aCD",
         "outputId": "fc2c6929-0a84-4704-d275-421cd529bfc1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12957,7 +12968,7 @@
         "id": "-BnPdEhH3x8q",
         "outputId": "b7ca3904-9058-4137-8c8b-e3fdca0b2c0c"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13032,7 +13043,7 @@
         "id": "iF1z_2ZI4CIl",
         "outputId": "765415e6-d12e-4fe9-a099-cafbe7ca063a"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13071,7 +13082,7 @@
         "id": "Dsae-MK02L6D",
         "outputId": "8205be76-1460-4bf0-8b09-4647f207b19d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13152,7 +13163,7 @@
         "id": "Q4lQWYVO3DIv",
         "outputId": "1934960e-d32b-44e4-8614-5f7208111347"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13187,7 +13198,7 @@
         "id": "TTRm8uyXueqb",
         "outputId": "299c121d-de57-46d6-f93d-6c9e10f06432"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -13264,7 +13275,7 @@
         "id": "f8my95gBvn41",
         "outputId": "f17559e3-a1bd-447a-8322-a25c9e0405eb"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13274,6 +13285,182 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### What are the most commonly used programming languages?"
+      ],
+      "metadata": {
+        "id": "oPv3AFeZSYiC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['LanguageWorkedWith'].value_counts(normalize = True).head(10).rename('PCT')\n",
+        "# NOTE how 'proportion' is renamed to 'PCT' (for percentage composition)\n",
+        "# Col renaming for series raises error if done as 'series.rename({oldname : newname})'"
+      ],
+      "metadata": {
+        "id": "pKEWCtU8Sboi",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 429
+        },
+        "outputId": "01ea68ac-bf6f-4460-d33b-33c9f2e742d2"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LanguageWorkedWith\n",
+              "HTML/CSS;JavaScript;PHP;SQL              0.016940\n",
+              "C#;HTML/CSS;JavaScript;SQL               0.016162\n",
+              "HTML/CSS;JavaScript                      0.014195\n",
+              "C#;HTML/CSS;JavaScript;SQL;TypeScript    0.011324\n",
+              "Java                                     0.010638\n",
+              "HTML/CSS;JavaScript;PHP                  0.010397\n",
+              "Python                                   0.008544\n",
+              "HTML/CSS;JavaScript;TypeScript           0.008041\n",
+              "HTML/CSS;Java;JavaScript;SQL             0.007675\n",
+              "C#                                       0.006428\n",
+              "Name: PCT, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PCT</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>LanguageWorkedWith</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>HTML/CSS;JavaScript;PHP;SQL</th>\n",
+              "      <td>0.016940</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C#;HTML/CSS;JavaScript;SQL</th>\n",
+              "      <td>0.016162</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HTML/CSS;JavaScript</th>\n",
+              "      <td>0.014195</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C#;HTML/CSS;JavaScript;SQL;TypeScript</th>\n",
+              "      <td>0.011324</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Java</th>\n",
+              "      <td>0.010638</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HTML/CSS;JavaScript;PHP</th>\n",
+              "      <td>0.010397</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Python</th>\n",
+              "      <td>0.008544</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HTML/CSS;JavaScript;TypeScript</th>\n",
+              "      <td>0.008041</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HTML/CSS;Java;JavaScript;SQL</th>\n",
+              "      <td>0.007675</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>C#</th>\n",
+              "      <td>0.006428</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "python_users = df['LanguageWorkedWith'].str.contains('Python').sum()\n",
+        "total_users = df['LanguageWorkedWith'].value_counts().sum()\n",
+        "round(python_users / total_users * 100, 2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oMcdwoCL8iv0",
+        "outputId": "f3535177-5a05-4acf-9555-46945a852c3e"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "41.62"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Y081mUI2SbaQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Qo3KaPw3SbGL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2-NgBdtjSY75"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
