--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -9,7 +9,7 @@
         "IEwqPxpCCxDp",
         "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyNsXosKiXeUpymWlzUYO6Cp",
+      "authorship_tag": "ABX9TyMUB91MqTUqGQ+EpiTsBrRm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,18 +43,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Link to dataset: https://survey.stackoverflow.co/"
-      ],
-      "metadata": {
-        "id": "U-We9tKJwG5l"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "The Stack Overflow annual survey is a comprehensive study of the global developer community, providing insights into programming languages, technologies, remote work trends, job roles, work environments, educational backgrounds, and other developer demographics. It captures responses from thousands of developers worldwide.\n",
         "\n",
-        "Here, we've used the [Stack Overflow survey's data set for 2019](https://https://survey.stackoverflow.co/). The size of the raw data set is 88883 records across 85 attributes. After cleaning the data set with Pandas, its size reduced to 88352 records across 24 attributes."
+        "Here, we've used the [Stack Overflow survey's data set for 2019](https://survey.stackoverflow.co/). The size of the raw data set is 88883 records across 85 attributes. After cleaning the data set with Pandas, its size reduced to 88352 records across 24 attributes."
       ],
       "metadata": {
         "id": "aI9nmA4LKjU5"
